# vayu-gnn

./: .gitignore  README.md  credentials.json  index.html  pyproject.toml  search.js  token.pickle  vayu_gnn.html
.github/workflows/: ci.yml
notebooks/EDA/: create_device_coord_maps.ipynb  download_pollution.ipynb  eric_eda.ipynb  raster_feature_engineering.ipynb  raster_preprocessing.ipynb  sensor_data.ipynb  weather_download.ipynb
notebooks/features/: .cache.sqlite  add_extra_nodes.ipynb  download_pollution.ipynb  eric_eda.ipynb  geo_download.ipynb  googleapi.ipynb  node_locations.ipynb  preprocessor.ipynb  sensor_data.ipynb  weather_download.ipynb
notebooks/presentations/: demo.ipynb  demo.py  demo_bins.py
src/vayu_gnn/data/: downloader.py  impute.py  loader.py  preprocessor.py
src/vayu_gnn/dbx/: __init__.py  dbx_config.py
src/vayu_gnn/model_run/: main.py
src/vayu_gnn/model_run/setup/: create_stdata_params.py  download_params.py  execution_params.py  preprocessor_params.py  train_model_params.py  utils.py
src/vayu_gnn/pipeline/: a_download.py  b_preprocess.py  c_create_stdata.py  d_train_model.py
vayu_gnn/: data.html  dbx.html  pipeline.html
vayu_gnn/data/: downloader.html  impute.html  loader.html  preprocessor.html
vayu_gnn/dbx/: dbx_config.html
vayu_gnn/pipeline/: a_download.html  b_preprocess.html  c_create_stdata.html  d_train_model.html
