[tool.poetry]
name = "vayu-gnn"
version = "0.1.0"
description = ""
authors = ["Emmett Sexton"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dropbox = "^12.0.2"
pandas = "^2.2.3"
dotenv = "^0.9.9"
geopandas = "^1.0.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pyarrow = "^19.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
