[project]
name = "vayu-gnn"
version = "0.1.0"
description = ""
authors = [{ name = "Emmett Sexton" }]
requires-python = "==3.10.*"
readme = "README.md"
dependencies = [
    "numpy<2.0",
    "dropbox>=12.0.2,<13",
    "pandas>=2.2.1,<3",
    "dotenv>=0.9.9,<0.10",
    "geopandas>=1.0.1,<2",
    "matplotlib>=3.10.0,<4",
    "seaborn>=0.13.2,<0.14",
    "pyarrow>=19.0.1,<20",
    "folium",
    "google-api-python-client>=2.162.0,<3",
    "google-auth-httplib2>=0.2.0,<0.3",
    "google-auth-oauthlib>=1.2.1,<2",
    "openmeteo-requests>=1.3.0,<2",
    "requests-cache>=1.2.1,<2",
    "retry-requests>=2.0.0,<3",
    "rasterio>=1.4.3,<2",
    "scikit-learn>=1.6.1,<2",
    "feature-engine>=1.8.3,<2",
    "panelsplit>=1.0.1,<2",
    "ipykernel>=6.29.5,<7",
    "torch>=2.6.0",
    "torch-spatiotemporal>=0.9.5,<0.10",
    "torch-geometric>=2.6.1,<3",
    "torch-sparse",
    "torch-scatter",
    "tsl>=2.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5,<7"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp310-cp310-linux_x86_64.whl", marker = "platform_system == 'Linux'" },
    { url = "https://download.pytorch.org/whl/cpu/torch-2.0.0-cp310-none-macosx_10_9_x86_64.whl", marker = "platform_system == 'Darwin' and platform_machine == 'x86_64'" },
    { url = "https://download.pytorch.org/whl/cpu/torch-2.0.0-cp310-none-macosx_11_0_arm64.whl", marker = "platform_system == 'Darwin' and platform_machine == 'arm64'" },
    { url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp310-cp310-win_amd64.whl", marker = "platform_system == 'Windows' and platform_machine == 'AMD64'" },
]

torch-sparse = [
    { url = "https://data.pyg.org/whl/torch-2.0.0+cpu/torch_sparse-0.6.18+pt20cpu-cp310-cp310-linux_x86_64.whl", marker = "platform_system == 'Linux'" },
    { url = "https://data.pyg.org/whl/torch-2.0.0+cpu/torch_sparse-0.6.18+pt20cpu-cp310-cp310-win_amd64.whl", marker = "platform_system == 'Windows' and platform_machine == 'AMD64'" },
    { url = "https://data.pyg.org/whl/torch-2.0.0+cpu/torch_sparse-0.6.17-cp310-cp310-macosx_10_15_x86_64.whl", marker = "platform_system == 'Darwin' and platform_machine == 'x86_64'" }
]

torch-scatter = [
    { url = "https://data.pyg.org/whl/torch-2.0.0+cpu/torch_scatter-2.1.2+pt20cpu-cp310-cp310-linux_x86_64.whl", marker = "platform_system == 'Linux'" },
    { url = "https://data.pyg.org/whl/torch-2.0.0+cpu/torch_scatter-2.1.2+pt20cpu-cp310-cp310-win_amd64.whl", marker = "platform_system == 'Windows' and platform_machine == 'AMD64'" },
    { url = "https://data.pyg.org/whl/torch-2.0.0+cpu/torch_scatter-2.1.2-cp310-cp310-macosx_11_0_x86_64.whl", marker = "platform_system == 'Darwin' and platform_machine == 'x86_64'" }
]


[build-system]
requires = ["hatchling", "torch", "numpy"]
build-backend = "hatchling.build"
