[project]
name = "vayu-gnn"
version = "0.1.0"
description = ""
authors = [{ name = "Emmett Sexton" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "numpy",
    "dropbox>=12.0.2,<13",
    "pandas>=2.2.1,<3",
    "dotenv>=0.9.9,<0.10",
    "geopandas>=1.0.1,<2",
    "matplotlib>=3.10.0,<4",
    "seaborn>=0.13.2,<0.14",
    "pyarrow>=19.0.1,<20",
    "folium",
    "google-api-python-client>=2.162.0,<3",
    "google-auth-httplib2>=0.2.0,<0.3",
    "google-auth-oauthlib>=1.2.1,<2",
    "openmeteo-requests>=1.3.0,<2",
    "requests-cache>=1.2.1,<2",
    "retry-requests>=2.0.0,<3",
    "rasterio>=1.4.3,<2",
    "scikit-learn>=1.6.1,<2",
    "feature-engine>=1.8.3,<2",
    "ipykernel>=6.29.5,<7",
    "torch>=2.5,<2.6",
    "torch-spatiotemporal",
    "torch_geometric",
    "torch_sparse",
    "torch_scatter",
    "streamlit>=1.43.2",
    "folium>=0.19.5",
    "streamlit-folium>=0.24.0",
    "tensorboard",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5,<7"]


[tool.uv.sources]
# Torch: install CPU wheels when not Linux; CUDA wheels on Linux.
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'"},
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'"}
]

torch_sparse = [
  { url="https://data.pyg.org/whl/torch-2.5.0%2Bcu124/torch_sparse-0.6.18%2Bpt25cu124-cp312-cp312-linux_x86_64.whl" , marker = "sys_platform == 'linux'" },
  { url="https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_sparse-0.6.18-cp312-cp312-macosx_11_0_universal2.whl",  marker = "sys_platform != 'linux'" }
]
torch_scatter = [
  { url="https://data.pyg.org/whl/torch-2.5.0%2Bcu124/torch_scatter-2.1.2%2Bpt25cu124-cp312-cp312-linux_x86_64.whl" , marker = "sys_platform == 'linux'" },
  { url="https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_scatter-2.1.2-cp312-cp312-macosx_10_13_universal2.whl", marker = "sys_platform != 'linux'"}
]
torch_cluster = [
  { url="https://data.pyg.org/whl/torch-2.5.0%2Bcu124/torch_cluster-1.6.3%2Bpt25cu124-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
  { url="https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_cluster-1.6.3-cp312-cp312-macosx_10_13_universal2.whl", marker = "sys_platform != 'linux'" }
]
torch_spline = [
  { url="https://data.pyg.org/whl/torch-2.5.0%2Bcu124/torch_spline_conv-1.2.2%2Bpt25cu124-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
  { url="https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_spline_conv-1.2.2-cp312-cp312-macosx_10_13_universal2.whl", marker = "sys_platform != 'linux'" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[build-system]
requires = ["hatchling", "torch", "numpy"]
build-backend = "hatchling.build"
